# ft_vox

./: .gitignore  .gitmodules  README.md  meson.build  premake5.lua
ft_vox/: ft_vox.vcxproj  ft_vox.vcxproj.filters
ft_vox/shaders/: final.fs.glsl  final.vs.glsl  gbuffer.fs.glsl  gbuffer.vs.glsl  highlight.fs.glsl  highlight.vs.glsl  line.fs.glsl  ssao.fs.glsl  ssao.vs.glsl  ssaoblur.fs.glsl
ft_vox/src/: Action.hpp  AmbientOcclusion.hpp  AxisAlignedBoundingBox.hpp  BlockTargeting.cpp  BlockTargeting.hpp  Callback.hpp  Chunk.cpp  Chunk.hpp  ChunkController.cpp  ChunkController.hpp  ChunkFactory.cpp  ChunkFactory.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  Cubemap.cpp  DebugGrid.cpp  DebugGrid.hpp  FPSCounter.hpp  GBuffer.hpp  Game.cpp  Game.hpp  GameEvents.hpp  Hash.hpp  IRenderer.hpp  PlayerHUD.cpp  Quad.hpp  Region.hpp  Settings.cpp  SimplexNoise.hpp  TextRenderer.cpp  TextRenderer.hpp  Time.hpp  World.cpp  World.hpp  WorldGenerator.cpp  WorldGenerator.hpp  main.cpp
ft_vox/src/octree/: Octree.hpp
ft_vox/src/threadpool/: ThreadPool.cpp  ThreadPool.hpp
ft_vox/src/ui/: Button.hpp  Hotbar.hpp  Image.hpp  Label.hpp  MainMenuBackground.cpp  MainMenuScene.hpp  PlayerHUDScene.hpp  SceneComponent.cpp  UI.cpp  UI.hpp  UIScene.cpp  UIScene.hpp
shaders/: basic.fs.glsl  basic.vs.glsl  button.fs.glsl  crosshair.vs.glsl  cubemap.fs.glsl  cubemap.vs.glsl  deferred.fs.glsl  gbuffer.fs.glsl  gbuffer.vs.glsl  hud.fs.glsl  hud.vs.glsl  quad.fs.glsl  quad.vs.glsl  screen_quad.fs.glsl  text.vs.glsl  ui.fs.glsl
shaders/filters/: ssao.glsl
shaders/lights/: directionallight.fs.glsl  light.fs.glsl  light.vs.glsl  lights.glsl  pointlight.fs.glsl
shaders/lights/shadows/: shadow.fs.glsl  shadow.vs.glsl
src/: Button.cpp  Button.hpp  Chunk.cpp  Chunk.hpp  ChunkBuilder.cpp  ChunkBuilder.hpp  ChunkData.cpp  ChunkData.hpp  ChunkFactory.cpp  ChunkFactory.hpp  ChunkMesh.cpp  ChunkMesh.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  Cube.cpp  Cube.hpp  Cubemap.cpp  DebugUI.cpp  DebugUI.hpp  FPSCounter.cpp  Game.cpp  Game.hpp  GameEvents.hpp  GreedyRenderer.cpp  GreedyRenderer.hpp  InstancedMesh.cpp  InstancedMesh.hpp  Label.hpp  MainMenu.cpp  MainMenu.hpp  MainMenuScene.hpp  PlayerHUD.cpp  PlayerHUD.hpp  PlayerHUDScene.hpp  Profiler.hpp  Scene.cpp  Scene.hpp  SceneComponent.cpp  SceneComponent.hpp  Settings.cpp  (+22 more)
src/components/: Direction.hpp  Position.hpp  Speed.hpp
src/core/rendering/: DeferredRenderer.cpp  DeferredRenderer.hpp  RenderingEngine.cpp  RenderingEngine.hpp  RenderingPipeline.cpp  RenderingPipeline.hpp
src/core/rendering/lights/: DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp
src/core/rendering/lights/shadows/: ShadowFrustum.hpp
src/core/rendering/pipeline/: RenderingPipeline.cpp  RenderingPipeline.hpp
src/core/rendering/primitives/: CubePrimitive.cpp  CubePrimitive.hpp  QuadPrimitive.cpp  QuadPrimitive.hpp
src/core/rendering/textures/: Framebuffer.cpp  Framebuffer.hpp
src/ecs/: Component.hpp
src/threadpool/: blocking_queue.hpp  semaphore.hpp  threadpool.hpp
src/ui/: Hotbar.hpp  MainMenuScene.hpp  PlayerHUDScene.hpp  SceneComponent.cpp  UI.cpp  UI.hpp  UIScene.hpp
